fixed Java 21 deprecations